JO-2008-02-72-0: Bugfix:   Fixed commit JO-2008-02-22-0 to work with arcorun
                 Review:   PJ

JO-2008-02-22-0: Bugfix:   In SJWC on Oracle dates appear truncated to just MM/DD/YYYY
                 Bugster:  6661500
                 Issue:    2503
                 Review:   AP

AP-2008-02-20-0: Bugfix:   ARCo reporting module installation script is broken 
                           on Red Hat Enterprise Linux 4 Update 4
                 Bugster:  6663741
                 Issue:    2498
                 Review:   JG

JO-2008-02-15-0: Bugfix:   Batch failure on Oracle database.
                 Bugster:  6659300
                 Review:   PJ

JO-2008-02-11-0: Bugfix:    Queries Average Job Turnaround Time and Average Job Wait Time irresponsive on MySQL
                 Bugster:   6661473
                 Review:    AP

AP-2008-02-06-0: Bugfix:    Correct the field name in dbwriter.xml for mysql 
                            to ju_exit_status

RD-2008-02-04-0: CVS:       Created V62alpha1_TAG
-------------------------------------------------

LP-2008-02-01-0: Cleanup:   Cleanup to use new GetCell functionality (detection)
                 Review:    PJ

JO-2008-02-01-0: Cleanup:  o got rid of 5.3 specific code
                           o got rid of word Please in prompts
                           o changes for consistency
                           o other minor cosmetic changes
                 Review:   PJ    

PJ-2008-01-31-0: Bugfix:    ORDER BY clause ignored in Advanced Query
                 Bugster:   6598005 
                 Issue:     2354
                 Review:    JO

LP-2008-01-25-0: Enhancem.: Improvements to SMF support
                            Cleanup for java 1.5

PJ-2008-01-25-0: Bugfix:    Sort on table column throws exception 
                            if explicit SORT specified in 
                            SimpleQuery Sort on table column
                 Bugster:   6549694
                 Issue:     2344