@@ -1,4 +1,7 @@
-JO-2008-02-72-0: Bugfix:   Fixed commit JO-2008-02-22-0 to work with arcorun
+JO-2008-02-28-0: Enhancem.: Enhanced reporting test SQLGeneratotTest
+                 Review:    PJ
+
+JO-2008-02-27-0: Bugfix:   Fixed commit JO-2008-02-22-0 to work with arcorun
                  Review:   PJ
 
 JO-2008-02-22-0: Bugfix:   In SJWC on Oracle dates appear truncated to just MM/DD/YYYY
